fix: IO_EXECUTOR 스레드 폭증 방지 및 cancelledRuns 토큰 누수 제거
- newCachedThreadPool → newVirtualThreadPerTaskExecutor() 교체
  Virtual thread는 OS 스레드를 블로킹하지 않아 대량 run 요청에도 안전
- updateStatusToStopped boolean 반환으로 변경
- stop(): 업데이트 대상 없으면(없는 run 또는 이미 terminal) cancelledRuns 즉시 회수

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>